<resources>
    <string name="app_name">Smart CityZen</string>
    <string name="instructions_pick_start">Допри на мапата за почетна точка (А)</string>
    <string name="instructions_pick_end">Сега допри за крајна точка (Б)</string>
    <string name="instructions_ready">Притисни \"Најди рута\"</string>
    <string name="set_start">Почеток (А)</string>
    <string name="set_end">Крај (Б)</string>
    <string name="find_accessible_route">Најди рута</string>
    <string name="report_obstacle">Пријави пречка</string>
    <string name="report_dialog_title">Детали за пријава</string>
    <string name="comment_hint">Опиши ја пречката или помагалото...</string>
    <string name="route_not_found">Не е пронајдена рута — мрежата сеуште не е вчитана или нема поврзан пат.</string>
    <string name="loading_network">Се вчитува пешачката мрежа на Битола…</string>
    <string name="report_photo_preview">Слика на пријавата</string>
    <string name="report_type_label">Тип на пречка</string>
    <string name="report_mobility_label">Се движиш со</string>
    <string name="report_take_photo">Пријави проблем (слика)</string>
    <string name="locating_gps">Ја наоѓам твојата локација…</string>
    <string name="gps_unavailable">Не можам да ја најдам локацијата. Провери GPS.</string>
    <string name="uploading_report">Ја праќам пријавата…</string>
    <string name="report_submitted">Пријавата е испратена — фала!</string>
    <string name="follow_me_start">Следи ме</string>
    <string name="follow_me_stop">Стоп</string>
    <string name="institution_dialog_title">Додади институција</string>
    <string name="institution_name_hint">Име (пр. Општина Битола)</string>
    <string name="institution_category_label">Категорија</string>
    <string name="institution_step_free">Влезот е без скали (рамен или со рампа)</string>
    <string name="institution_entrance_type_label">Тип на влез</string>
    <string name="institution_accessible_toilet">Има пристапен тоалет</string>
    <string name="institution_accessible_parking">Има пристапен паркинг</string>
    <string name="institution_elevator">Има лифт</string>
    <string name="institution_tactile_paving">Има тактилни патеки за слепи лица</string>
    <string name="institution_audio_signage">Има звучни сигнали/ознаки</string>
    <string name="institution_ramp_width_ok">Рампата е доволно широка (за инвалидска количка)</string>
    <string name="institution_name_required">Внеси име на институцијата</string>
    <string name="institution_notes_hint">Дополнителни забелешки...</string>
    <string name="add_institution">Додади институција</string>
    <string name="institution_submitted">Институцијата е додадена — фала!</string>
    <string name="mobility_profile">Мој тип на мобилност</string>
    <string name="help_title">Помош</string>
    <string name="last_verified_prefix">Последно верификувано</string>
    <string name="cancel_route">Откажи ја рутата</string>
</resources>
